--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -7,4 +7,4 @@ RUN yum -y install ansible
 RUN yum -y install openssh openssh-clients
 RUN echo 'export PATH=$PATH:/usr/bin/' >> ~/.bashrc
 WORKDIR /src
-RUN cp ./* /src
+RUN cp * /src
