--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -8,3 +8,6 @@ RUN yum -y install openssh openssh-clients
 RUN echo 'export PATH=$PATH:/usr/bin/' >> ~/.bashrc
 WORKDIR /src
 COPY ./* /src
+RUN chmod 700 /src/Desploy.sh
+RUN chmod 700 /src/Ansible/Desploy.sh
+RUN chmod 700 /src/Terraform/Desploy.sh
